Fixed various spelling mistakes.

--- a/doc/paper/api.tex
+++ b/doc/paper/api.tex
@@ -79,7 +79,7 @@ by the client servers and be checked against this CA.
 
 All data is sent and received as JSON. \\
 
-For GET requests, all parameters are embeded as a segment in the endpoint. An
+For GET requests, all parameters are embedded as a segment in the endpoint. An
 example API curl request for the path \verb+users/:username+ with parameter
 \verb+username+ set to \underline{max} and API server \verb+api.example.com+
 may look like this:
