--- a/doc/paper/api/ssh_keys.tex
+++ b/doc/paper/api/ssh_keys.tex
@@ -28,8 +28,8 @@ GET /keys/:hash
 \end{lstlisting}
 
 \lstinline[language=http_request]{:hash} is an optional argument. If set, only
-the key with the definied hash will be returned, if available. The argument
-should be used whenever possible to decrease bandwith and overhead.
+the key with the defined hash will be returned, if available. The argument
+should be used whenever possible to decrease bandwidth and overhead.
 
 {\tiny \underline{Response:}}
 \begin{lstlisting}[language=json, numbers=none]
