--- a/doc/paper/problem.tex
+++ b/doc/paper/problem.tex
@@ -47,8 +47,8 @@ only, but they have some issues:
 		\end{itemize}
 
 	\item There is a separate maintenance account on the target machine with a
-		\ul{fixed password for all machines accross all customers}. In addition
-		to issue 1 you gain access to \ul{all} machines accross all of your
+		\ul{fixed password for all machines across all customers}. In addition
+		to issue 1 you gain access to \ul{all} machines across all of your
 		customers if you get the password. Regardless to say that this is a huge
 		hole in your security concept, but some companies handle it this way.
 
