--- a/doc/paper/requirements.tex
+++ b/doc/paper/requirements.tex
@@ -23,15 +23,16 @@
 
 \section{Requirements}
 
-The main focus is on \ul{data authenticity and integrety}. Otherwise one could
+The main focus is on \ul{data authenticity and integrity}. Otherwise, one could
 simply give himself privileged access. Even third party could get access via
 MITM\footnote{\textbf{M}an \textbf{I}n \textbf{T}he \textbf{M}iddle} attacks, if
 the data could be manipulated. \\
 
-A second focus should be on \ul{simplicity}. The toolset should be easy to use,
+A second focus should be on \ul{simplicity}. The tool set should be easy to use,
 otherwise there is no benefit on using mauth. Every employee should use the same
-account accross all machines without the need to maintain the accounts
+account across all machines without the need to maintain the accounts
 independent per machine. \\
 
 In addition to this, the configuration at the customers' side should be simple.
-A new server should be integrated into the network in a couple of minutes.
+A new server should be integrated into the network in a couple of seconds to
+minutes.
