--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mauth (1.3.0) unstable; urgency=low
+
+  * merge from upstream
+  * multiarch support
+
+ -- Alexander Haase <ahaase@alexhaase.de>  Wed, 01 Jun 2016 01:58:56 +0200
+
 mauth (1.2.0) unstable; urgency=low
 
   * fixed mauth-keys return code, if login is not managed by mauth
