--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ mauth (1.3.0) unstable; urgency=low
 
   * merge from upstream
   * multiarch support
+  * added libmauth packages
 
  -- Alexander Haase <ahaase@alexhaase.de>  Wed, 01 Jun 2016 01:58:56 +0200
 
