--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+mauth (1.3.2) unstable; urgency=medium
+
+  * merge from upstream
+  * libpam installs configuration files for seemless integration with PAM and
+    sudo now.
+
+ -- Alexander Haase <ahaase@alexhaase.de>  Wed, 01 Jun 2016 03:39:49 +0200
+
 mauth (1.3.1) unstable; urgency=medium
 
   * set PermitUserEnvironment to yes in mauth-openssh postinst script
