--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mauth (1.3.3) unstable; urgency=medium
+
+  * fix in libpam-mauth depends
+  * fix in libmauth-dev depends
+
+ -- Alexander Haase <ahaase@alexhaase.de>  Wed, 01 Jun 2016 17:19:20 +0200
+
 mauth (1.3.2) unstable; urgency=medium
 
   * merge from upstream
